# igm-alpine

./: .gitignore  README.md
igm-2.0/: igm-run.py  igm.slurm  plot_results.py  pyproject.toml
igm-2.0/prototypes/: clean.sh  geology.nc  igm-run.py  optimize.nc  visualize.ipynb
igm-2.0/prototypes/.ipynb_checkpoints/: visualize-checkpoint.ipynb
igm-2.0/results/: oggm_data_prep.py  opti-params.ipynb  params.json
igm-2.0/results/.ipynb_checkpoints/: opti-params-checkpoint.ipynb
igm-2.0/results/01/: computational-statistics.txt  igm-run-parameters.txt  igm.slurm  mysmb.py
igm-2.0/results/02/: computational-statistics.txt
igm-2.0/results/03/: computational-statistics.txt  igm-run-parameters.txt  igm-run.py  igm.15619861.out
igm-2.0/results/04/: geology-optimized.nc  igm-run.py  igm.15624784.out
igm-2.0/results/05/: geology-optimized.nc  igm-run.py  igm.15624895.out
igm-2.0/results/06/: computational-statistics.txt  igm-run.py
igm-2.0/results/07/: README.txt  computational-statistics.txt  geology-optimized.nc  geology.nc  igm-run.py  igm.15627348.out
igm-2.0/results/08/: computational-statistics.txt  geology-optimized.nc  geology.nc  igm-run.py  igm.15636783.out  igm.15648082.out  visualize.ipynb
igm-2.0/results/09/: igm-run.py  igm.15648110.out  sliding_velocity_mag.txt  sliding_velocity_x.txt  visualize.ipynb
igm-2.0/results/10/: sliding_velocity_mag.txt  sliding_velocity_x.txt  sliding_velocity_y.txt  visualize.ipynb
igm-2.0/results/11/: geology-optimized.nc  igm-run.py  igm.slurm  sliding_velocity_mag.txt  visualize.ipynb
(+351 files in other folders)
