[tool.poetry]
name = "mendenhall"
version = "0.1.0"
description = ""
authors = ["Ethan Pierce <ethan.pierce@colorado.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.22.0"
scipy = "^1.11.1"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
jupyterlab = "^4.0.2"
netCDF4 = "^1.6.4"
xarray = "^2023.6.0"
ncvue = "^4.1.2"
cartopy = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
